# c-engine

./: .gitignore  CMakeLists.txt  build.sh  compile_commands.json  main.cpp  readme.md
.cache/clangd/index/: ctexture.cpp.258B7862F556F11B.idx  ctexture.h.28A09E5B6B5DF0BC.idx  imconfig.h.77CB290AB5B11345.idx  imgui.cpp.7BF91D06FFC430E7.idx  imgui.h.CADD65B34CCC7813.idx  imgui_draw.cpp.5A707946B7F1AA3E.idx  imgui_impl_sdl3.cpp.7899991FEC7F9904.idx  imgui_impl_sdl3.h.5A3522C124C5B367.idx  imgui_impl_sdlrenderer3.cpp.D0EF20E0069515F8.idx  imgui_impl_sdlrenderer3.h.77C6B5143C328D66.idx  imgui_internal.h.AFB7EF6AC9C4FCE3.idx  imgui_tables.cpp.6F29DC8EB4D241C4.idx  imgui_widgets.cpp.A56EB02457ADD2CC.idx  imstb_rectpack.h.D69D7DA0A4F209AC.idx  imstb_textedit.h.BCFD71C041467C85.idx  imstb_truetype.h.3E2F818D82A90D81.idx  main.cpp.1A42B116A997DF2C.idx  main_ui.cpp.9ED8AAB1E55FEF5B.idx  main_ui.h.58359DFFE70FBE76.idx  renderer.cpp.4698B9271E192948.idx  renderer.h.073801EAA15437DC.idx  sprite.cpp.48A71278DB390837.idx  sprite.h.9AB8AA998E97EDF9.idx  texture_manager.cpp.5EEDB60410432D23.idx  texture_manager.h.0C2906BEFCBEFAFC.idx
engine/: vec.h
management/: CMakeLists.txt  texture_manager.cpp  texture_manager.h
rendering/: CMakeLists.txt  ctexture.cpp  ctexture.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h
ui/: CMakeLists.txt  main_ui.cpp  main_ui.h
